--- a/Projeto 1/css/stylesheet.css
+++ b/Projeto 1/css/stylesheet.css
@@ -77,12 +77,15 @@ nav ul li a:hover {     /* Define a cor do hover do menu */
     padding: 2rem 2rem 2rem;
     border-radius: 8px;
     text-align: center;
+    margin: 0 auto;
     background-color: #eee;
+    max-width: 950px;
 }
 
 .hero h2 {
     font-size: 2rem;
     color: #2f4f4f;
+    font-family: 'cookie';
 }
 
 .cta-button {
@@ -101,8 +104,9 @@ nav ul li a:hover {     /* Define a cor do hover do menu */
 }
 
 section {
-    padding-top: 8rem;
-    margin-top: 5rem;
+    padding-top: 5rem; /* Mantém espaçamento interno */
+    margin-top: -8rem; /* Remove o espaço visual extra */
+    scroll-margin-top: 5rem; /* Compensa a altura do header fixo */
     max-width: 1100px;
     margin: auto;
 }
@@ -194,7 +198,7 @@ section p {
 
 /* Estrutura da secção de contactos */
 #contactos {
-    display: flex;
+    display: flex; 
     flex-direction: column;
     align-items: center; /* Centraliza horizontalmente */
     justify-content: center; /* Centraliza verticalmente */
@@ -207,12 +211,11 @@ section p {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
-    max-width: 1100px;
+    max-width: 950px;
     width: 100%;
     align-items: center;
 }
 
-/* Estilo do formulário */
 .form-container {
     flex: 1;
 }
@@ -267,6 +270,38 @@ footer {
     margin-top: 2rem;
 }
 
+#reservas {
+    padding: 2rem;
+}
+
+.reservas-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr; /* Duas colunas iguais */
+    gap: 2rem;
+    align-items: center;
+    margin-top: 1rem;
+    max-width: 950px;
+}
+
+.reservas-info {
+    background-color: #f9f9f9;
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    text-align: left;
+}
+
+.reservas-info h3 {
+    color: #3e8e7e;
+    margin-bottom: 1rem;
+}
+
+.reservas-info p {
+    margin-bottom: 0.5rem;
+    color: #666;
+    text-align: left;
+}
+
 .contact-button {
     position: fixed;
     bottom: 20px;
@@ -287,4 +322,8 @@ footer {
 
 a {
     color: inherit;
+}
+
+html {
+    scroll-behavior: smooth;
 }
